# sigmazerosearch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  dependencies.md  index.md  larsoft.md  ntuples.md  usage.md
docs/source/contributing/: index.md
examples/: usage.py
plots/: sigmazerosearch.mplstyle  sigmazerosearch.tex.mplstyle
sigmazerosearch/: __init__.py  general.py  loader.py  selection.py  truth.py  utils.py
sigmazerosearch/alg/: __init__.py  fv.py  lamb.py  muon.py
sigmazerosearch/loader/: loader.py
sigmazerosearch/types/: general.py  selection.py
tests/: test_fv.py  test_lamb.py  test_loader.py  test_selection.py  test_types.py  test_utils.py
