[tool.poetry]
name = "sigmazerosearch"
version = "0.1.0"
description = ""
authors = ["Niam Patel <naz1997@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
scipy = "^1.11.4"
uproot = "^5.2.1"
mplhep = "^0.3.31"
awkward-pandas = "^2023.8.0"
awkward = "^2.5.2"
vector = "^1.3.1"
tabulate = "^0.9.0"
hist = "^2.7.3"
sphinx-design = "^0.6.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
pre-commit = "^3.7.0"
ruff = "^0.4.2"
jupyterlab = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "8.0.2"
furo = "^2024.8.6"
myst-parser = "^4.0.0"
sphinx-autodoc2 = "^0.5.0"
sphinx-autobuild = "^2024.4.16"

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
